ChangeLog

22 Oct 2019: flux -> flux_mars77  in jsub, mars_mapi, mars_mapt2, and fast_subs_mars
Functions flux and flux_mars77 do not return the exact same results, because in flux_mars77 the atmospheric short-wavelength scattered irradiance is multiplied with (1-albedo).

21 Oct 2019: Added Mars/Tests/

12 Oct 2019: Release v1.1.6  doi:10.5281/zenodo.3483924

23 Sep 2019: added C version of conductionQ and its dependencies

20 Sep 2019: The long-used and much-used subroutine conductionQ received an upgrade. It now iterates when the surface temperature, which is the initial value for the linearization of the thermal radiation term, changes too fast. It was also converted from Fortran 77 to Fortran 90 (or Fortran 2008 actually). The old version of conductionQ is still available in release 1.1.5 and all earlier releases. The new version is conductionQ.f90. The change has also been propagated into conductionQ2.f90

Sep 2019: internal restructuring of horizons and viewfactor calculations, without external consequence

30 Aug 2019: changed definition of viewfactor by a factor of pi, so a half-sphere integrates to 1.

Aug 2019: fixed a bug in fieldofview_subs.f90 and redid test case

28 Jun 2019: added two more variants of cratersQ_mars

17 May 2019: Topo3D/  switched from storing subtended angles to storing viewfactors, which saves a factor of cos(v) later and ultimately provides a speedup by a factor of several.

May 2019: Updated parts of Topo3D/Test/ and the agreement with the analytical solution improved

8 May 2019: Release v1.1.5  doi:10.5281/zenodo.2678125

Apr 2019: work in Topo3D/ directory:
readhorizons can now read cropped domains; lots of renaming in the Topo3D/ directory to enhance usability; readdem has moved from topos.f90 to crater_common.f90, because input path is now defined in filemanager.

17 Apr 2019: The last month or so involved code cleanup, especially in the Asteroids/ directory.
